@@ -4,12 +4,12 @@ vendor/js-test-core:
   url: git://github.com/pivotal/js-test-core.git
   branch: master
   type: git
-  revision: 2d2cfd09bbe99b26673304778b82d18a58f36a6b
+  revision: e02024d52c7d58596c22b81b673de22f9e0a1dc4
   remote: braid/vendor/js-test-core
 core: 
   squashed: true
-  url: git://github.com/pivotal/screw-unit.git
   branch: master
+  url: git://github.com/pivotal/screw-unit.git
   type: git
   revision: 021d23c02d8b773302bafdae91513659379d43fa
   remote: braid/core
